# rscan

./: .gitignore  CLI_USAGE.md  Cargo.toml  HEADLESS_API_NOTES.md  LICENSE  PROJECT_ALGORITHMS_ANALYSIS.md  README.md  bom.json  easy  easy.i64  out.txt  pseudocode.jsonl  tui改造计划.md  参考文献.md  毕业论文目录.docx.txt  毕业论文目录.md  第一章_绪论.md  第七章_总结与展望.md  第三章_系统总体设计.md  第二章_相关技术与理论基础.md  第五章_TUI界面与Zellij集成实现.md  第六章_系统测试与性能评估.md  第四章_4.2_Web安全扫描模块实现_完善版.md  第四章_4.3_漏洞检测模块实现_完善版.md  第四章_4.4_逆向分析模块实现_完善版.md  第四章_4.5_统一任务引擎实现_完善版.md  第四章_核心功能模块实现.md  答辩论文.md  答辩论文摘要.md  论文2.docx  附录A_核心API接口文档.md  附录B_配置文件示例.md  附录C_测试数据集说明.md  附录D_项目源码结构说明.md
.rscan/reverse/: active_project.txt  selected_target.txt
.rscan/zellij/: config.kdl  control.kdl  inspect.kdl  reverse.kdl  rscan.kdl  work.kdl
analysis/: LOGIN_REVERSE_REPORT_2026-03-11.md
benches/: fetcher_bench.rs
docs/: PROJECT_STRUCTURE.md  REVERSE_USAGE.md  TASK_SCHEMA.md  TUI_USAGE.md  ZELLIJ_NATIVE_INTEGRATION.md  android_reverse_rustification_plan.md  current_project_deep_analysis_2026-03-06.md  xjwh_apk_technical_malware_assessment.md  论文2_插图补强方案_2026-04-20.md
docs/diagrams/: rscan_layered_architecture.dot  rscan_layered_architecture.mmd
ghidra_out/: ghidra_export_pseudocode.java
jobs/job-18950f8a2ddb5521/: meta.json
projects/default/: README.md
reports/blackgray_dual_summary_20260423_223827/: summary.json  检测汇总.md
reports/ch6_live_20260416_235447/: CH6_LIVE_REPORT.md  host_quick_json.out  host_tcp_1_1024_json.out  host_tcp_common_json.out  host_udp_common_json.out  summary.json  summary_enriched.json  web_crawl_small.out  web_dir_small.out  web_dir_small_fixed.out  web_live_http_https.out
reports/ch6_live_20260423_205256/: CH6_FIGURE_ASSETS.md  CH6_LIVE_REPORT.md  PERF_OBSERVABILITY.md  host_quick_json.out  host_tcp_1_1024_json.out  host_tcp_common_json.out  host_udp_common_json.out  reverse_smoke.cmd  summary.json  (+6 more)
reverse_out/: ghidra_export_pseudocode.java  pseudocode.jsonl
scripts/: ch6_generate_live_pack.sh  ci_web_bench_gate.sh  generate_architecture_diagram.sh  package_linux_offline.sh  package_windows_offline.sh  reverse_baseline_run.sh  reverse_smoke.sh  reverse_thesis_repro.sh  web_bench_compare.sh
src/: errors.rs  lib.rs  main.rs
todo/: web_strengthening_plan.md
workspace/: README.md
违法apk/: 20260310-1138010.jobf
(+20815 files in other folders)
