[package]
name = "rscan"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.0.1"
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3.31"
rayon = "1.11.0"
reqwest = { version = "0.12.25", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
[[test]]
name ="cli_test"    
path = "./src/main.rs"


