[package]
name = "rscan"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.0.1"
clap = { version = "4.5.54", features = ["derive"] }
futures = "0.3.31"
rayon = "1.11.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"
scraper = "0.25.0"
bytes = "1.11.0"
pnet = "0.35.0"
socket2 = "0.6.1"
ipnetwork = "0.18.0"
httpdate = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
[[test]]
name ="cli_test"    
path = "./src/main.rs"

[[bin]]
name="bypass"
path="./src/cores/netscan_en/bypass.rs"
[dev-dependencies]
warp = "0.3"
criterion = "0.8.1"


